<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f9"
    android:orientation="vertical"
    tools:context="com.saiyi.naideanlock.ui.setting.SettingActivity">

    <com.saiyi.naideanlock.topbar.TopToolBar
        android:id="@+id/setting_top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48"/>

    <CheckBox
        android:id="@+id/setting_unmanned_mode_cb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_52"
        android:button="@null"
        android:drawablePadding="@dimen/size_5"
        android:drawableRight="@drawable/selector_setting"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/size_15"
        android:paddingRight="@dimen/size_15"
        android:text="@string/unmanned_mode_warn"
        android:textColor="@color/color_141414"
        android:textSize="@dimen/word_size_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:background="@color/color_e1e1e1" />

    <CheckBox
        android:id="@+id/setting_tamper_cb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_52"
        android:button="@null"
        android:drawablePadding="@dimen/size_5"
        android:drawableRight="@drawable/selector_setting"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/size_15"
        android:paddingRight="@dimen/size_15"
        android:text="@string/tamper_warn"
        android:textColor="@color/color_141414"
        android:textSize="@dimen/word_size_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:background="@color/color_e1e1e1" />

    <CheckBox
        android:id="@+id/setting_no_power_cb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_52"
        android:button="@null"
        android:drawablePadding="@dimen/size_5"
        android:drawableRight="@drawable/selector_setting"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/size_15"
        android:paddingRight="@dimen/size_15"
        android:text="@string/no_power_warn"
        android:textColor="@color/color_141414"
        android:textSize="@dimen/word_size_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:background="@color/color_e1e1e1" />

    <TextView
        android:id="@+id/setting_remote_unlocking_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_52"
        android:drawablePadding="@dimen/size_5"
        android:drawableRight="@mipmap/go_into"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/size_15"
        android:paddingRight="@dimen/size_15"
        android:text="@string/remote_unlocking_pass"
        android:textColor="@color/color_141414"
        android:textSize="@dimen/word_size_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:background="@color/color_e1e1e1" />

    <TextView
        android:id="@+id/setting_unlocking_set_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_52"
        android:drawablePadding="@dimen/size_5"
        android:drawableRight="@mipmap/go_into"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/size_15"
        android:paddingRight="@dimen/size_15"
        android:text="@string/unlocking_set"
        android:textColor="@color/color_141414"
        android:textSize="@dimen/word_size_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:background="@color/color_e1e1e1" />

</LinearLayout>
