<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f9"
    android:orientation="vertical"
    tools:context="com.saiyi.naideanlock.ui.control.ControlActivity">

    <com.saiyi.naideanlock.topbar.TopToolBar
        android:id="@+id/control_top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@mipmap/home_page_bg">

            <!--<ProgressBar-->
            <!--android:id="@+id/pgb_battery"-->
            <!--style="?android:attr/progressBarStyleHorizontal"-->
            <!--android:layout_width="@dimen/size_40"-->
            <!--android:layout_height="@dimen/size_15"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_marginTop="@dimen/size_10"-->
            <!--android:max="100"-->
            <!--android:progress="50"-->
            <!--android:progressDrawable="@drawable/layer_progressbar" />-->

            <TextView
                android:id="@+id/control_power_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/size_15"
                android:layout_marginTop="@dimen/size_10"
                android:text="设备电量：56%"
                android:textColor="@android:color/white"
                android:textSize="@dimen/word_size_12"/>


            <ImageView
                android:id="@+id/lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@mipmap/lock_bg" />

            <TextView
                android:id="@+id/control_lock_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/lock"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/size_21"
                android:text="Da门锁"
                android:textColor="@android:color/white"
                android:textSize="@dimen/word_size_14" />

            <TextView
                android:id="@+id/control_no_device_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lock"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/size_12"
                android:text="@string/no_device"
                android:textColor="@color/color_ff7b06"
                android:textSize="@dimen/word_size_14"/>

            <TextView
                android:id="@+id/control_add_device_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/control_no_device_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/size_4"
                android:text="@string/add_device"
                android:textSize="@dimen/word_size_14"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/size_14"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/control_camera_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@mipmap/camera"
                android:gravity="center"
                android:paddingTop="@dimen/size_18"
                android:text="@string/camera"
                android:textColor="@color/color_484b5f"
                android:textSize="@dimen/word_size_14" />

            <TextView
                android:id="@+id/control_administration_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@mipmap/privilege_management"
                android:gravity="center"
                android:paddingTop="@dimen/size_18"
                android:text="@string/administration"
                android:textColor="@color/color_484b5f"
                android:textSize="@dimen/word_size_14" />

            <TextView
                android:id="@+id/control_open_lock_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@mipmap/open_lock"
                android:gravity="center"
                android:paddingTop="@dimen/size_18"
                android:text="@string/open_remote_lock"
                android:textColor="@color/color_484b5f"
                android:textSize="@dimen/word_size_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/size_32"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/control_set_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@mipmap/set"
                android:gravity="center"
                android:paddingTop="@dimen/size_18"
                android:text="@string/set"
                android:textColor="@color/color_484b5f"
                android:textSize="@dimen/word_size_14" />

            <TextView
                android:id="@+id/control_record_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@mipmap/unlocking_record"
                android:gravity="center"
                android:paddingTop="@dimen/size_18"
                android:text="@string/record"
                android:textColor="@color/color_484b5f"
                android:textSize="@dimen/word_size_14" />

            <TextView
                android:id="@+id/control_information_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@mipmap/information"
                android:gravity="center"
                android:paddingTop="@dimen/size_18"
                android:text="@string/information"
                android:textColor="@color/color_484b5f"
                android:textSize="@dimen/word_size_14" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
