<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reset_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f9"
    android:orientation="vertical"
    tools:context="com.saiyi.naideanlock.ui.ResetPasswordActivity">

    <com.saiyi.naideanlock.topbar.TopToolBar
        android:id="@+id/reset_top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48"/>

    <EditText
        android:id="@+id/reset_new_pass_ed"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginRight="@dimen/size_15"
        android:layout_marginTop="@dimen/size_15"
        android:background="@drawable/shape_user_name"
        android:hint="@string/new_pass_one"
        android:maxLength="18"
        android:paddingLeft="@dimen/size_15"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHint="@color/color_c4c4c4" />

    <EditText
        android:id="@+id/reset_new_pass_two_ed"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginRight="@dimen/size_15"
        android:layout_marginTop="@dimen/size_15"
        android:background="@drawable/shape_user_name"
        android:hint="@string/new_pass_two"
        android:maxLength="18"
        android:paddingLeft="@dimen/size_15"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHint="@color/color_c4c4c4" />

    <Button
        android:id="@+id/reset_pass_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48"
        android:layout_marginLeft="@dimen/size_15"
        android:layout_marginRight="@dimen/size_15"
        android:layout_marginTop="@dimen/size_15"
        android:background="@drawable/shape_register_btn"
        android:text="@string/sure"
        android:textColor="@android:color/white"
        android:textSize="@dimen/word_size_18" />

</LinearLayout>
